@@ -1,26 +1,23 @@
 session_name: libtmux
 start_directory: ./ # load session relative to config location (project root).
-before_script: ./bootstrap_env.py # ./ to load relative to project root.
+before_script: pipenv install --dev --skip-lock
+shell_command_before: 
+  - '[ -d `pipenv --venv` ] && source `pipenv --venv`/bin/activate && reset'
 windows:
 - window_name: libtmux
   focus: True
   layout: main-horizontal
   options:
     main-pane-height: 35
-  shell_command_before:
-    - '[ -d .venv -a -f .venv/bin/activate ] && source .venv/bin/activate'
   panes:
   - focus: true
   - pane 
   - make watch_test
-
 - window_name: docs
   layout: main-horizontal
   options:
     main-pane-height: 35
   start_directory: doc/
-  shell_command_before: 
-    - '[ -d ../.venv -a -f ../.venv/bin/activate ] && source ../.venv/bin/activate'
   panes:
   - focus: true
   - pane
