@@ -1,4 +1,4 @@
-Copyright (c) 2016, Tony Narlock
+Copyright (c) 2016-2017, Tony Narlock
 All rights reserved.
 
 Redistribution and use in source and binary forms, with or without
