@@ -1,6 +1,6 @@
 Metadata-Version: 1.1
 Name: libtmux
-Version: 0.7.5
+Version: 0.7.7
 Summary: scripting library / orm for tmux
 Home-page: http://github.com/tony/libtmux/
 Author: Tony Narlock
@@ -188,7 +188,7 @@ Description: libtmux - scripting library for tmux
         ---------------
         
         ==============  ==========================================================
-        tmux support    1.8, 1.9a, 2.0, 2.1, 2.2, 2.3, 2.4
+        tmux support    1.8, 1.9a, 2.0, 2.1, 2.2, 2.3, 2.4, 2.5, 2.6
         python support  2.7, >= 3.3, pypy, pypy3
         Source          https://github.com/tony/libtmux
         Docs            https://libtmux.git-pull.com
