@@ -1,4 +1,4 @@
 docutils==0.14
-releases==1.3.1 # updated from 1.2.0
-sphinx==1.6.4
+releases==1.4.0 # updated from 1.3.1
+sphinx==1.6.5
 alagitpull==0.0.13
