@@ -4,8 +4,16 @@ Changelog
 
 Here you can find the recent changes to libtmux
 
+- :release:`0.7.7 <2017-11-10>`
+- :support:`-` Don't add -x/-y in tmux >= 2.6 if running tmuxp from inside
+  client.
+
+- :release:`0.7.6 <2017-11-09>`
+- :feature:`-` Allow ``Window.select_layout`` with no args
+- :bug:`-` Fix test where ``bell-`` was no longer ambiguous as of tmux 2.6
+
 - :release:`0.7.5 <2017-10-07>`
-- :support:`-` Hotfix to support tmux 2.6 session creation
+- :support:`- backported` Hotfix to support tmux 2.6 session creation
 
 - :release:`0.7.4 <2017-08-19>`
 - :feature:`65` Add session id to commands, thanks `@askedrelic`_
